# sjmb

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build-mips  build.rs  install.sh
config/: irc.toml  o_acl.json  sjmb.json
src/: config.rs  db_util.rs  hash_util.rs  ircbot.rs  lib.rs  re_acl.rs  re_mut.rs  startup.rs  str_util.rs  util.rs  web_util.rs
