# Cargo.toml

[package]
name = "sjmb"
version = "1.7.0"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
description = "IRC bot"
repository = "https://github.com/sjm42/sjmb"
readme = "README.md"
keywords = ["irc", "bot"]
license = "MIT OR Apache-2.0"
edition = "2021"
resolver = "2"


[dependencies]
clap = { version = "4", features = ["derive"] }
irc = { git = "https://github.com/aatxe/irc.git", default-features = false, features = [
    "toml_config",
] }
anyhow = "1"
chrono = "0"
chrono-tz = "0"
futures = "0"
regex = "1"
reqwest = { version = "0", features = [
    "brotli",
    "charset",
    "deflate",
    "gzip",
    "http2",
    "json",
    "rustls-tls",
    "trust-dns",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = { version = "3", features = ["full"] }
sqlx = { version = "0", features = [
    "macros",
    "migrate",
    "runtime-tokio-rustls",
    "postgres",
] }
tera = "1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0", features = ["log"] }
tracing-subscriber = "0"
url = "2"
webpage = { version = "2", default-features = false }


[build-dependencies]
build-data = "0.1"


[profile.release]
lto = "fat"
opt-level = 3


[profile.minsize]
inherits = "release"
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"

# EOF
