# Cargo.toml

[package]
name = "sjmb"
version = "1.10.4"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
description = "IRC bot"
repository = "https://github.com/sjm42/sjmb"
readme = "README.md"
keywords = ["irc", "bot"]
license = "MIT OR Apache-2.0"
edition = "2024"
resolver = "2"


[dependencies]
anyhow = "1"
chrono = "0"
chrono-tz = "0"
clap = { version = "4", features = ["derive"] }
futures = "0"
irc = { version = "1.1", default-features = false, features = ["ctcp", "channel-lists", "toml_config", "encoding"] }
regex = "1"
reqwest = { version = "0", default-features = false, features = [
    "brotli",
    "charset",
    "deflate",
    "gzip",
    "http2",
    "json",
    "rustls-tls",
    "trust-dns",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = { version = "3", features = ["full"] }
# do not enable TLS support for SQLx or connections will just hang
# sjm 2025-07-28
sqlx = { version = "0", features = [
    "macros",
    "migrate",
    "runtime-tokio",
    "postgres",
] }
tera = "1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0", features = ["log"] }
tracing-subscriber = "0"
url = "2"
webpage = { version = "2", default-features = false }


[build-dependencies]
anyhow = "1"
build-data = "0"


[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3


[profile.minsize]
inherits = "release"
strip = true
opt-level = "z"
panic = "abort"

# EOF
