# Cargo.toml

[package]
name = "sjmb"
version = "1.11.2"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
description = "IRC bot"
repository = "https://github.com/sjm42/sjmb"
readme = "README.md"
keywords = ["irc", "bot"]
license = "MIT OR Apache-2.0"
edition = "2024"
resolver = "2"


[dependencies]
# NOTE (brotli 8.0.3 build break): alloc-stdlib 0.2.3 / brotli-decompressor 5.0.2
# allow alloc-no-stdlib 3.0.0 via a `>=2.0.4, <4` range, but brotli itself pins
# 2.0.x; mixing the two versions fails to compile. There is NO Cargo.toml-only
# fix: a `=2.0.4` pin here only adds a parallel node, while brotli-decompressor
# still resolves 3.0.0 across the major boundary (Cargo won't unify majors).
# The only working fix is a Cargo.lock pin that forces a single shared version:
#     cargo update -p alloc-no-stdlib --precise 2.0.4
# A plain `cargo update` undoes it, so re-run that command after updating until
# brotli fixes this upstream.

anyhow = "1"
chrono = "0"
chrono-tz = "0"
clap = { version = "4", features = ["derive"] }
futures = "0"
irc = { version = "1.1", default-features = false, features = ["ctcp", "channel-lists", "toml_config", "encoding"] }
regex = "1"
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = [
    "brotli",
    "charset",
    "deflate",
    "gzip",
    "http2",
    "json",
    "rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = { version = "3", features = ["full"] }
# do not enable TLS support for SQLx or connections will just hang
# sjm 2025-07-28
sqlx = { version = "0", default-features = false, features = [
    "macros",
    "migrate",
    "runtime-tokio",
    "postgres",
] }
tera = "1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0", features = ["log"] }
tracing-subscriber = "0"
url = "2"
webpage = { version = "2", default-features = false }


[build-dependencies]
anyhow = "1"
build-data = "0"


[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3


[profile.minsize]
inherits = "release"
strip = true
opt-level = "z"
panic = "abort"

# EOF
